--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "start": "node index.js"
   },
   "keywords": [],
@@ -21,6 +21,8 @@
     "yamljs": "^0.3.0"
   },
   "devDependencies": {
-    "prisma": "^5.22.0"
+    "jest": "^30.2.0",
+    "prisma": "^5.22.0",
+    "supertest": "^7.1.4"
   }
 }
